--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ body {
     flex-direction: column;
 }
 
+.justify-space-between {
+    justify-content: space-between;
+}
+
 .container {
     width: 50%;
     margin: 2rem auto;
